<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/play"
        android:onClick="startGame"
        android:contentDescription="@string/app_play"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_play"
        android:textSize="34sp"
        android:layout_below="@+id/imageButton"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_red_dark" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="70sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/follow_twitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_follow"
        android:textColor="@color/colorWhite"
        android:background="@color/colorTwitch"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/subtitle_twitch"        />

    <TextView
        android:id="@+id/subtitle_twitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_support"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/title_app"
        android:textColor="@android:color/white"/>
</RelativeLayout>